<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/dp_10">

    <android.support.v7.widget.CardView
        android:id="@+id/saving_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        app:cardCornerRadius="@dimen/dp_5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/save_fund_edt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/background_edt"
                android:hint="@string/amount" />

            <EditText
                android:id="@+id/save_fund_edt_content"
                android:layout_below="@id/save_fund_edt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/background_edt"
                android:hint="@string/content" />
            <TextView
                android:id="@+id/save_fund_pick_date"
                android:text="@string/datepicker"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:layout_below="@id/save_fund_edt_content"
                android:background="@drawable/background_btn_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_10"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/saving_top"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_200"/>

    <Button
        android:id="@+id/save_fund_btn_save"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_login_btn"
        android:text="@string/save"
        android:textColor="@color/colorWhite" />
</RelativeLayout>