<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:contentDescription="@string/login"
        android:id="@+id/imgPayaForget"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/icon_login" />

    <EditText
        android:inputType="text"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginStart="@dimen/dp_100"
        android:id="@+id/editLoginId"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/background_edt"
        android:textColorHint="@color/colorTextHintLogin"
        android:hint="@string/login_id" />

    <EditText
        android:textColor="@color/colorBlack"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_marginStart="@dimen/dp_100"
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLoginId"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/background_edt"
        android:textColorHint="@color/colorTextHintLogin"
        android:hint="@string/password" />

    <Button
        android:textSize="@dimen/sp_15"
        android:id="@+id/btn_loging"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_alignLeft="@id/editPassword"
        android:layout_alignStart="@id/editPassword"
        android:layout_alignRight="@id/editPassword"
        android:layout_alignEnd="@id/editPassword"
        android:background="@drawable/background_login_btn"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/login"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/login_cancel"
        android:text="@string/cancel_"
        android:layout_below="@id/btn_loging"
        android:layout_alignRight="@id/btn_loging"
        android:layout_alignEnd="@id/btn_loging"
        android:layout_width="wrap_content"
        android:textStyle="italic"
        android:textColor="@color/colorTextCancleLogin"
        android:textColorHighlight="@color/backgroundFlash"
        android:layout_height="wrap_content" />

</RelativeLayout>
